[gd_scene load_steps=8 format=3 uid="uid://ia2w8e818ih2"]

[ext_resource type="PackedScene" uid="uid://4j882nsb4sl8" path="res://scenes/grid_button.tscn" id="1_j75om"]
[ext_resource type="Script" path="res://scripts/main.gd" id="1_ooi14"]
[ext_resource type="Texture2D" uid="uid://c8i7mwvycq1yc" path="res://assets/button_border.png" id="3_ifrhc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fvhv3"]
bg_color = Color(0.196078, 0.482353, 0.270588, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v4rtc"]
bg_color = Color(0.196078, 0.388235, 0.247059, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tnwdg"]
bg_color = Color(0.196078, 0.482353, 0.270588, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cemhp"]
bg_color = Color(0.188235, 0.294118, 0.215686, 1)

[node name="Game" type="Node2D"]

[node name="Main" type="Node2D" parent="."]
script = ExtResource("1_ooi14")

[node name="buttonBorder" type="Sprite2D" parent="Main"]
texture = ExtResource("3_ifrhc")

[node name="GridButtons" type="Node2D" parent="Main"]

[node name="Button1" parent="Main/GridButtons" instance=ExtResource("1_j75om")]
offset_left = -104.0
offset_top = -104.0
offset_right = -40.0
offset_bottom = -40.0

[node name="Button2" parent="Main/GridButtons" instance=ExtResource("1_j75om")]
offset_left = -32.0
offset_top = -104.0
offset_right = 32.0
offset_bottom = -40.0

[node name="Button3" parent="Main/GridButtons" instance=ExtResource("1_j75om")]
offset_left = 40.0
offset_top = -104.0
offset_right = 104.0
offset_bottom = -40.0

[node name="Button4" parent="Main/GridButtons" instance=ExtResource("1_j75om")]
offset_left = -104.0
offset_top = -32.0
offset_right = -40.0
offset_bottom = 32.0

[node name="Button5" parent="Main/GridButtons" instance=ExtResource("1_j75om")]
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0

[node name="Button6" parent="Main/GridButtons" instance=ExtResource("1_j75om")]
offset_left = 40.0
offset_top = -32.0
offset_right = 104.0
offset_bottom = 32.0

[node name="Button7" parent="Main/GridButtons" instance=ExtResource("1_j75om")]
offset_left = -104.0
offset_top = 40.0
offset_right = -40.0
offset_bottom = 104.0

[node name="Button8" parent="Main/GridButtons" instance=ExtResource("1_j75om")]
offset_left = -32.0
offset_top = 40.0
offset_right = 32.0
offset_bottom = 104.0

[node name="Button9" parent="Main/GridButtons" instance=ExtResource("1_j75om")]
offset_left = 40.0
offset_top = 40.0
offset_right = 104.0
offset_bottom = 104.0

[node name="PlayButton" type="Button" parent="Main"]
offset_left = 40.0
offset_top = -127.0
offset_right = 104.0
offset_bottom = -112.0
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 10
theme_override_styles/normal = SubResource("StyleBoxFlat_fvhv3")
theme_override_styles/hover = SubResource("StyleBoxFlat_v4rtc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_tnwdg")
theme_override_styles/disabled = SubResource("StyleBoxFlat_cemhp")
text = "Play"

[node name="Labels" type="Node" parent="Main"]

[node name="StatusLabel" type="Label" parent="Main/Labels"]
offset_left = -40.0
offset_top = 128.0
offset_right = 48.0
offset_bottom = 154.0

[node name="ScoreLabel" type="Label" parent="Main/Labels"]
offset_left = -128.0
offset_top = -131.0
offset_right = -40.0
offset_bottom = -105.0
text = "0000"
horizontal_alignment = 2

[node name="HighscoreLabel" type="Label" parent="Main/Labels"]
offset_left = -56.0
offset_top = -131.0
offset_right = 32.0
offset_bottom = -105.0
text = "0000"
horizontal_alignment = 2

[node name="ScoreNameLabel" type="Label" parent="Main/Labels"]
offset_left = -104.0
offset_top = -131.0
offset_right = -16.0
offset_bottom = -105.0
theme_override_font_sizes/font_size = 9
text = "score"

[node name="HighscoreNameLabel" type="Label" parent="Main/Labels"]
offset_left = -32.0
offset_top = -131.0
offset_right = 56.0
offset_bottom = -105.0
theme_override_font_sizes/font_size = 9
text = "best"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -12)
zoom = Vector2(2.39, 2.39)
